--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ button:hover{
   top:30px;
   position: relative;
   transform: translate(-50%, -50%);
-  left:205px;
+  left:19%;
 }
 .cakecontent{
   width: 70%;
